--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,5 +13,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RTREE_BIN_DIR})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 
 add_subdirectory(rtree)
+add_subdirectory(test)
